<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">IsDoorLocked</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="name">IsDoorLocked</string>
    <string name="moto">A Man\'s home is his castle!</string>
    <string name="logo">Logo</string>
    <string name="get_started">Get started!</string>
    <string name="create_new">Sign in with your account or create a new one.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="settings">Settings</string>
    <string name="ip_settings">IP settings</string>
    <string name="ip">IP</string>
    <string name="apply">Apply</string>
    <string name="go_back">Go back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="direct_connection">Direct connection</string>
    <string name="wifi_settings">Wifi settings</string>
    <string name="welcome">Welcome! Sign up now.</string>
    <string name="rewrite_your_password">Rewrite your password</string>
    <string name="wifi_ssid">Wifi-ssid</string>
    <string name="wifi_pass">Wifi-pass</string>
    <string name="permisson">permission</string>
    <string name="mask">mask</string>
    <string name="connect_ip">connect-ip</string>
    <string name="connectButton">CONNECT</string>
    <string name="wifi">Choose a WIFI</string>
    <string name="auto"><b>\u2022 AUTO- </b>If you click on the AUTO button, you will have to choose the Access Point of the server and connect to it.</string>
    <string name="hand"><b>\u2022 MANUAL- </b>If you click on the MANUAL button, you will have to write the IP manually.</string>
    <string name="AutoButton">AUTO</string>
    <string name="HandButton">MANUAL</string>
</resources>
