<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".FirstPage"
    android:orientation="vertical"
    android:gravity="top">

            <TextView

                android:id="@+id/isdoorlocked"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textAlignment="center"
                android:background="@drawable/navbar"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:padding="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/getstarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="55sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logorcreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_new"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/signin"
            style="@style/Margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/log"
            android:baselineAligned="false"
            android:paddingBottom="15dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="15dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textSize="25sp" />

        <Button
            android:id="@+id/signup"
            style="@style/Margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign"
            android:paddingBottom="15dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />


    </LinearLayout>


        </LinearLayout>


