<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:id="@+id/header"
    xmlns:src="http://schemas.android.com/tools"
    android:background="@drawable/stain"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/usernameprofil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="50sp"
        android:textColor="@color/pink"/>

    <ImageView
        android:id="@+id/profilpicture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/user"
        android:contentDescription="@string/mask"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/permissionprofil"
        android:text="@string/permisson"
        android:textSize="40sp"
        android:textColor="@color/pink"
        android:layout_marginTop="15dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="username"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/pink" />
</LinearLayout>
